...
        </View>

        <View style={styles.loginRow}>
          <Text style={[styles.loginText, { color: colors['text-secondary'] }]}>
            Already have an account?{' '}
          </Text>
          <TextLink onPress={() => router.push('/(auth)/login')} testID="landing_button_login">
            Log in
          </TextLink>
        </View>
      </View>
    </ScreenWrapper>
  );
...
